# gate3

./: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  env.local  env.test  pyproject.toml
.github/workflows/: ci.yml  deploy.yaml
app/: config.py  main.py
app/api/common/: amount.py  annotations.py  models.py  routes.py  test_amount.py  test_models.py  test_utils.py  utils.py
app/api/common/evm/: gas.py  test_gas.py  test_tx_status.py  tx_status.py  utils.py
app/api/nft/: models.py  routes.py  test_models.py  test_routes.py
app/api/oauth/: bitflyer.py  config.py  gemini.py  models.py  routes.py  test_bitflyer.py  test_gemini.py  test_helpers.py  test_uphold.py  test_zebpay.py  uphold.py  utils.py  zebpay.py
app/api/phishing/: constants.py  manager.py  metrics.py  models.py  routes.py  test_manager.py  test_routes.py
app/api/pricing/: cache.py  coingecko.py  constants.py  jupiter.py  models.py  routes.py  utils.py
app/api/pricing/tests/: test_cache.py  test_coingecko.py  test_jupiter.py  test_routes.py  test_utils.py
app/api/swap/: cache.py  constants.py  metrics.py  models.py  routes.py  test_routes.py  test_utils.py  utils.py
app/api/swap/providers/: base.py  near_intents.py
app/api/swap/providers/jupiter/: client.py  constants.py  mocks.py  models.py  test_client.py  test_transformations.py  transformations.py  utils.py
app/api/swap/providers/lifi/: client.py  constants.py  mocks.py  models.py  test_client.py  transformations.py  utils.py
app/api/swap/providers/near_intents/: cache.py  client.py  constants.py  mocks.py  models.py  test_cache.py  test_client.py  test_utils.py  transformations.py  utils.py
app/api/swap/providers/squid/: client.py  constants.py  mocks.py  models.py  test_client.py  transformations.py  utils.py
app/api/swap/providers/zero_ex/: client.py  constants.py  mocks.py  models.py  test_client.py  transformations.py  utils.py
app/api/tokens/: contants.py  manager.py  models.py  routes.py  test_manager.py  test_routes.py
app/api/v1/: models.py  routes.py
app/api/v1/pricing/: models.py  routes.py
app/core/: cache.py  http.py  logging.py  test_http.py  test_logging.py
data/: cg-nfts.json
grafana/: gate3-swaps.json
integration/: conftest.py  test_ping.py  test_swap.py
