[project]
name = "gate3"
version = "0.16.0"
description = "Gate API for web3 applications at Brave"
authors = [
]
license = {text = "n"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.136.0,<0.137.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "redis[hiredis] (>=7.4.0,<7.5.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "prometheus-client (>=0.25.0,<0.26.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "cachetools (>=7.0.1,<7.1.0)",
    "requests (>=2.32.4,<3.0.0)",
    "fakeredis[json] (>=2.30.1,<3.0.0)",
    "sentry-sdk[fastapi] (>=2.38.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poethepoet = { version = "~0.38.0", extras = ["poetry_plugin"]}

[tool.poetry.group.dev.dependencies]
ruff = "0.15.12"
ty = "0.0.33"
pytest = "9.0.3"
pytest-asyncio = "1.3.0"
pytest-cov = "7.1.0"
respx = "0.23.1"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-rvA --cov=app --cov-report=term-missing"
markers = [
    "sanity: marks tests as sanity checks",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
# Pydantic-noisy: demoted to warn until ty gains Pydantic support
unknown-argument = "warn"
missing-argument = "warn"
invalid-argument-type = "warn"
invalid-assignment = "warn"
unresolved-attribute = "warn"
possibly-unresolved-reference = "warn"
# Real issues to fix and promote back to error
invalid-return-type = "warn"
# Library type-stub issues (redis async, asyncio.gather narrowing)
invalid-await = "warn"
no-matching-overload = "warn"
not-iterable = "warn"
unsupported-operator = "warn"

[[tool.ty.overrides]]
include = ["**/test_*.py", "**/tests/**"]
[tool.ty.overrides.rules]
invalid-method-override = "warn"

[tool.poe]
poetry_command = ""

[tool.poe.tasks]
format = { shell = "ruff check --select I --fix . && ruff check --fix . && ruff format" }
typecheck = { shell = "ty check" }
