[project]
name = "gate3"
version = "0.20.0"
description = "Gate API for web3 applications at Brave"
authors = [
]
license = {text = "n"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.138.2,<0.139.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "redis[hiredis] (>=8.0.1,<8.1.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "prometheus-client (>=0.25.0,<0.26.0)",
    "prometheus-fastapi-instrumentator (>=8.0.0,<8.1.0)",
    "cachetools (>=7.1.1,<7.2.0)",
    "requests (>=2.32.4,<3.0.0)",
    "fakeredis[json] (>=2.30.1,<3.0.0)",
    "sentry-sdk[fastapi] (>=2.38.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poethepoet = { version = "~0.38.0", extras = ["poetry_plugin"]}

[tool.poetry.group.dev.dependencies]
ruff = "0.15.22"
ty = "0.0.55"
pytest = "9.1.1"
pytest-asyncio = "1.4.0"
pytest-cov = "7.1.0"
respx = "0.23.1"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-rvA --cov=app --cov-report=term-missing --ignore=integration"
markers = [
    "sanity: marks tests as sanity checks",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
# Pydantic-noisy: demoted to warn until ty gains Pydantic support
unknown-argument = "warn"
missing-argument = "warn"
invalid-argument-type = "warn"
invalid-assignment = "warn"
unresolved-attribute = "warn"
possibly-unresolved-reference = "warn"
# Real issues to fix and promote back to error
invalid-return-type = "warn"
# Library type-stub issues (redis async, asyncio.gather narrowing)
invalid-await = "warn"
no-matching-overload = "warn"
not-iterable = "warn"
unsupported-operator = "warn"

[[tool.ty.overrides]]
include = ["**/test_*.py", "**/tests/**"]
[tool.ty.overrides.rules]
invalid-method-override = "warn"

[tool.poe]
poetry_command = ""

[tool.poe.tasks]
format = { shell = "ruff check --select I --fix . && ruff check --fix . && ruff format" }
# --exit-zero-on-warning: ty 0.0.52 made error-on-warning the default; the
# warn-level rules above are intentionally non-blocking
typecheck = { shell = "ty check --exit-zero-on-warning" }
